[tool.poetry]
name = "first-time"
version = "0.0.1"
description = "um trabalho utilizando numpy"
authors = ["Ian Lopes"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
